# antikhitera-mcp-client

./: .dockerignore  .gitignore  AGENTS.MD  AGENTS.md  CLI_DOCUMENTATION.md  Cargo.toml  Dockerfile  LICENSE  POSTCARD_CACHE.md  README.md  REVISION.md  ROADMAP.md  SUMMARY.md  Taskfile.yml  book.toml  errors.json
antikythera-cli/: Cargo.toml  build.rs
antikythera-cli/src/: cli.rs  error.rs  lib.rs  runtime.rs
antikythera-cli/src/cli/: mod.rs
antikythera-cli/src/config/: mod.rs
antikythera-cli/src/domain/: entities.rs  mod.rs
antikythera-cli/src/infrastructure/: config.rs  history.rs  mod.rs
antikythera-cli/src/presentation/: mod.rs  tui.rs  tui_tracing.rs
antikythera-cli/src/tui/: mod.rs
antikythera-cli/src/wizard/: mod.rs
antikythera-cli/tests/: scenario.rs
antikythera-core/: Cargo.toml  build.rs
antikythera-core/src/: constants.rs  entrypoint.rs  integration_tests.rs  lib.rs  logging.rs  mod.rs  test_utils.rs
antikythera-core/src/application/: client.rs  hooks.rs  mod.rs  model_provider.rs  observability.rs  observability_backup.rs  session_store.rs  stdio.rs  streaming.rs
antikythera-core/src/cli/: mod.rs
antikythera-core/src/config/: app.rs  cache.rs  error.rs  loader.rs  migration.rs  mod.rs  postcard_config.rs  provider.rs  serializer.rs  server.rs  tool.rs  wasm_config.rs
antikythera-core/src/domain/: entities.rs  mod.rs  sanitize.rs  types.rs
antikythera-core/src/infrastructure/: mod.rs
antikythera-core/src/security/: config.rs  mod.rs  rate_limit.rs  secrets.rs  validation.rs
antikythera-core/tests/: multi_agent.rs  tooling_tests.rs  transport_tests.rs
antikythera-core/tests/tooling_tests/: part_06.rs
antikythera-core/tests/transport_tests/: part_06.rs  part_07.rs
antikythera-log/: Cargo.toml  README.md
antikythera-log/src/: entries.rs  lib.rs  lint.rs  logger.rs  macros.rs  session_logs.rs  subscriber.rs
antikythera-log/tests/: logger_tests.rs
antikythera-sdk/: Cargo.toml  FFI.md  README.md  WASM_COMPONENT.md  WASM_CONFIG.md  WASM_HOST_IMPORTS.md
antikythera-sdk/src/: component.rs  ffi.rs  ffi_helpers.rs  high_level_api.rs  lib.rs  sdk_logging.rs  wasm.rs  wasm_config.rs  wasm_ffi.rs  wasm_prompt.rs  wasm_types.rs
antikythera-sdk/src/agents/: conversions.rs  mod.rs  orchestrator.rs  registry.rs  types.rs  validation.rs
antikythera-sdk/src/client/: mod.rs
antikythera-sdk/src/component/: mod.rs
antikythera-sdk/src/config/: mod.rs
antikythera-sdk/src/config_ffi/: agent.rs  core.rs  fields.rs  helpers.rs  mod.rs  prompts.rs  providers.rs
antikythera-sdk/src/json_schema/: ffi.rs  mod.rs  types.rs  validator.rs
antikythera-sdk/src/prompts/: mod.rs
antikythera-sdk/src/response/: mod.rs
antikythera-sdk/src/security_ffi/: helpers.rs  mod.rs  rate_limit.rs  secrets.rs  validation.rs
antikythera-sdk/src/servers/: mod.rs
antikythera-sdk/src/session/: ffi.rs  mod.rs
antikythera-sdk/src/wasm_agent/: mod.rs  processor.rs  prompt_variables.rs  runner.rs  stream_types.rs  tool_registry.rs  types.rs
antikythera-session/: Cargo.toml  README.md
antikythera-session/src/: export.rs  lib.rs  manager.rs  session.rs
antikythera-session/tests/: session_tests.rs
tests/: Cargo.toml  README.md  TESTING_CONVENTIONS.md  concurrency_tests.rs  config_parsing_tests.rs  config_tests.rs  integration_runner.rs  integration_tests.rs  provider_tests.rs  runtime_features_tests.rs  serialization_tests.rs  server_functionality_tests.rs  server_tests.rs  server_validation_tests.rs  test_utils.rs  tooling_tests.rs  transport_tests.rs  tui_tests.rs  ui_tests.rs  wizard_tests.rs
tests/cli/: chat_use_case.rs  cli.rs  commands_tests.rs  config.rs  entities.rs  error.rs  infrastructure_config.rs  log_panel_tests.rs  mcp_time_tool.rs  mod.rs  runtime.rs  scenario.rs  stdio_tests.rs  wasm_harness.rs
tests/client/: client_tests.rs
tests/concurrency_tests/: part_05.rs
tests/config/: comprehensive_config_security_tests.rs  loading_tests.rs  mod.rs  parsing_tests.rs
tests/config/comprehensive_config_security_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs
tests/config/loading_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
tests/config/parsing_tests/: part_02.rs  part_04.rs  part_05.rs
tests/contract/: compatibility_tests.rs
tests/contract/compatibility_tests/: part_02.rs  part_04.rs  part_05.rs  part_06.rs
tests/ffi-tests/: Cargo.toml
tests/fixtures/contracts/: payload_contract.golden.json  wit_signatures.golden.txt
tests/hooks/: hook_tests.rs
tests/hooks/hook_tests/: part_02.rs  part_04.rs  part_05.rs  part_06.rs
tests/integration_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
tests/log/: comprehensive_logging_tests.rs  logger_behavior_tests.rs  logger_tests.rs
tests/log/comprehensive_logging_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs
tests/log/logger_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
tests/multi_agent/: guardrails_tests.rs  hardening_tests.rs
tests/multi_agent/guardrails_tests/: part_02.rs  part_04.rs  part_05.rs
tests/multi_agent/hardening_tests/: part_01.rs  (+12 more)
tests/observability/: observability_tests.rs
tests/provider/: mod.rs  type_detection_tests.rs
tests/resilience/: resilience_tests.rs
tests/security/: config_tests.rs  mod.rs  rate_limit_tests.rs  secrets_tests.rs  validation_tests.rs
tests/security_ffi/: mod.rs  tests.rs
tests/serialization/: mod.rs  toml_tests.rs
tests/server/: functionality_tests.rs  mod.rs  validation_tests.rs
tests/services/: chat_tests.rs
tests/session/: comprehensive_session_tests.rs  session_tests.rs
tests/streaming/: comprehensive_streaming_tests.rs  streaming_tests.rs
tests/tooling_tests/: part_03.rs  part_05.rs
tests/transport_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
tests/tui/: mod.rs
tests/ui/: assembler_tests.rs  component_tests.rs  mod.rs  schema_tests.rs
tests/wizard_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
(+542 files in other folders)
