[package]
name = "antikhitera-mcp-client"
version = "0.3.1"
edition = "2024"
default-run = "menu"

[lib]
path = "src/lib/mod.rs"

[dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "process", "io-std", "io-util"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.17"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4"] }
atty = "0.2"

toml = "0.9.8"
axum = { version = "0.8", features = ["json"] }
utoipa = "5.4"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
shellexpand = "3.0"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "menu"
path = "src/bin/main.rs"

[[bin]]
name = "rest"
path = "src/bin/rest.rs"

[[bin]]
name = "stdio"
path = "src/bin/stdio.rs"

