[workspace]
resolver = "2"
members = [
    "antikythera-core",
    "antikythera-sdk",
    "antikythera-cli",
    "antikythera-log",
    "antikythera-session",
    "tests",
    "scripts",
]
default-members = ["antikythera-cli"]

[workspace.package]
version = "1.0.3"
edition = "2024"
authors = ["tsfarizi"]
license = "MIT"
repository = "https://github.com/antikythera/mcp-client"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "process", "io-std", "io-util"] }
tokio-stream = "0.1.18"
async-trait = "0.1.89"
futures = "0.3.32"

# HTTP and networking (for core only)
reqwest = { version = "0.12.24", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
axum = { version = "0.8.9", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
postcard = { version = "1.1.3", features = ["alloc"] }

# CLI and TUI
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"

# Error handling and logging
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

# Utilities
uuid = { version = "1.23.1", features = ["v4"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
sysinfo = "0.38.4"
dotenvy = "0.15.7"
shellexpand = "3.1.2"

# WASM support (for SDK)
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
ffi-support = "0.4.4"

# API documentation (for core)
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
