[package]
name = "antikythera-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for Antikythera MCP client"

[features]
default = ["multi-agent"]
multi-agent = ["antikythera-core/multi-agent"]

[[bin]]
name = "antikythera"
path = "src/bin/menu.rs"

[[bin]]
name = "antikythera-config"
path = "src/bin/config.rs"

[dependencies]
antikythera-core = { path = "../antikythera-core", version = "0.9.9", features = ["full"] }
antikythera-sdk = { path = "../antikythera-sdk", version = "0.9.9" }

# Core async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# HTTP client (for LLM API calls)
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard = { workspace = true }

# CLI and TUI
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true

# Error handling and logging
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
base64.workspace = true
chrono.workspace = true
sysinfo.workspace = true
dotenvy.workspace = true
shellexpand.workspace = true

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.39", features = ["test-util"] }
