[package]
name = "antikythera-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core MCP protocol, transport layers, and agent runtime"

[features]
default = ["native-transport"]

# Sandboxed tool execution via a WASM component model runtime.
# ✅ STABLE: Runs .wasm modules as sandboxed agents via wasmtime.
# See `infrastructure::wasm::WasmAgentRunner` for the module ABI.
# Requires a `rt-multi-thread` tokio runtime (native builds only).
wasm-runtime = ["dep:wasmtime", "dep:anyhow"]

# OS-level process management (Stdio transport)
native-transport = ["tokio/process", "dep:sysinfo"]

# Configuration cache (Postcard binary format) - now always enabled
cache = []

# Interactive configuration wizard (terminal UI + Clap argument parsing).
# ✅ STABLE: Component model is complete; suitable for production use.
wizard = ["dep:crossterm", "dep:ratatui", "dep:clap"]

# Multi-Agent orchestration support.
# ✅ STABLE: Full orchestration with scheduling, routing, and pipeline execution.
# See `application::agent::multi_agent::orchestrator::MultiAgentOrchestrator`.
# No external dependencies required for core orchestration.
# NOTE: All persistent state storage (Redis, GCS, filesystem, etc.) is the
# responsibility of the HOST that embeds this framework. The WASM component
# exposes serializable state via WIT host imports (save-state / load-state);
# how and where that state is persisted is entirely up to the host.
multi-agent = []

# LLM HTTP provider clients (Gemini, OpenAI-compatible, Ollama).
#
# This feature gates the HTTP-based model client implementations inside
# `infrastructure::model::{adapter, clients, factory}` as well as the
# `DynamicModelProvider::from_configs` convenience constructor.
#
# **Enable only for native (non-WASM) builds.**
# - ✅ CLI (`antikythera-cli`) always enables this via the `full` feature.
# - ✅ SDK native builds enable this via `sdk-core`.
# - ❌ Server-side WASM component builds (`wasm32-wasip1`) must NOT enable this —
#      the host process that embeds the .wasm module is responsible for LLM calls;
#      the WASM component only exchanges structured messages through the WIT interface
#      (`antikythera::call_llm_sync` host import).
http-providers = []

# Full-featured build (all capabilities)
full = ["wasm-runtime", "native-transport", "cache", "wizard", "multi-agent", "http-providers", "dep:axum", "dep:tower-http", "dep:utoipa-swagger-ui"]

[dependencies]
# Core async runtime
tokio = { version = "1.51.0", default-features = false, features = ["macros", "rt", "sync", "time", "io-util"] }
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true

# Logging
antikythera-log = { path = "../antikythera-log", version = "0.9.6", features = ["subscriber"] }

# HTTP and networking
reqwest.workspace = true
reqwest-eventsource.workspace = true

# REST API server (optional - for backward compatibility)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
utoipa.workspace = true
utoipa-swagger-ui = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
postcard.workspace = true

# Error handling and logging
thiserror.workspace = true
tracing.workspace = true
once_cell = "1.19"

# Utilities
uuid.workspace = true
base64.workspace = true
chrono.workspace = true
sysinfo = { workspace = true, optional = true }
dotenvy.workspace = true
shellexpand.workspace = true
clap = { workspace = true, optional = true }

# TUI and wizard (optional)
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }

# WASM runtime (optional, for sandboxed execution)
wasmtime = { version = "15.0", optional = true }
anyhow = { version = "1.0", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.39", features = ["test-util"] }
