[package]
name = "antikythera-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-level API wrapper with FFI and WASM bindings"

[lib]
# rlib:   required for native Rust builds, server-side WASM component, and tests.
crate-type = ["rlib"]

[package.metadata.component]
package = "antikythera:mcp-framework"

[package.metadata.component.dependencies]

[features]
# Default build: native Rust with single-agent support.
# Browser WASM (`wasm`) and server-side WASM component (`component`) are
# explicit opt-in lanes and must not be enabled implicitly by default.
default = ["single-agent"]

# Shared runtime surface for SDK features that depend on core/session crates.
# Model API calls are host-owned, so `sdk-core` intentionally does not enable
# any direct HTTP provider path in `antikythera-core`.
sdk-core = ["dep:antikythera-core", "dep:antikythera-session"]



# Server-side WASM Component Model support (wasm32-wasip1 WASI).
# This is the primary WASM target: the .wasm binary is hosted by a native
# process (Rust/Python/Go/etc.) that embeds wasmtime and calls exports via FFI.
# Host imports (call_llm_sync, etc.) are declared in wit/antikythera.wit.
component = ["dep:wit-bindgen-rt"]

# Compatibility alias for CI jobs that still use `--features wasm`.
# Keep this minimal and independent from `component` because many jobs target
# `wasm32-unknown-unknown`, while component builds use `wasm32-wasip1`.
wasm = []

# WASM configuration binary format (postcard serialization)
wasm-config = []



# Agent modes - these control what antikythera-core includes
single-agent = ["sdk-core", "antikythera-core/native-transport"]
multi-agent = ["sdk-core", "antikythera-core/multi-agent"]

# Optional capabilities
wasm-sandbox = ["sdk-core", "antikythera-core/wasm-runtime"]

# Full-featured build (native runtime with all features)
full = ["multi-agent", "antikythera-core/full"]

[dependencies]
# Core with configurable features - SDK enables what it needs through feature wiring
antikythera-core = { path = "../antikythera-core", version = "0.9.6", default-features = false, optional = true }

# Logging
antikythera-log = { path = "../antikythera-log", version = "0.9.6", features = ["subscriber"] }

# Session management
antikythera-session = { path = "../antikythera-session", version = "0.9.6", optional = true }

# Core async runtime (wasm-compatible)
tokio = { version = "1.39", default-features = false, features = ["macros", "rt"] }
futures = "0.3.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling and logging
thiserror = "2.0.17"
tracing = "0.1"
async-trait = "0.1"



# WASM Component Model
witgen = "0.5"
wit-bindgen = "0.37"
wit-bindgen-rt = { version = "0.37", features = ["bitflags"], optional = true }



[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "test-util"] }
serial_test = "3.0"
