[package]
name = "antikythera-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "High-level API wrapper with FFI and WASM bindings"

[lib]
# rlib:   required for native Rust builds, server-side WASM component, and tests.
# cdylib: required for wasm32-unknown-unknown jobs that expect
#         target/.../antikythera_sdk.wasm output artifact.
crate-type = ["rlib", "cdylib"]

[package.metadata.component]
package = "antikythera:mcp-framework"

[package.metadata.component.dependencies]

[features]
default = ["single-agent"]

sdk-core = ["dep:antikythera-core", "dep:antikythera-session"]

# Server-side WASM Component Model support (wasm32-wasip1 WASI).
# This is the primary WASM target: the .wasm binary is hosted by a native
# process (Rust/Python/Go/etc.) that embeds wasmtime and calls exports via FFI.
# Host imports (call_llm_sync, etc.) are declared in wit/antikythera.wit.
component = []

# Agent modes - these control what antikythera-core includes
single-agent = ["sdk-core", "antikythera-core/native-transport"]
multi-agent = ["sdk-core", "antikythera-core/multi-agent"]

# Optional capabilities
wasm-sandbox = ["sdk-core", "antikythera-core/wasm-runtime"]

# Full-featured build (native runtime with all features)
full = ["multi-agent", "antikythera-core/full"]

[dependencies]
# Core with configurable features - SDK enables what it needs through feature wiring
antikythera-core = { path = "../antikythera-core", version = "1.0.0", default-features = false, optional = true }

# Logging
antikythera-log = { path = "../antikythera-log", version = "1.0.0", features = ["subscriber"] }

# Session management
antikythera-session = { path = "../antikythera-session", version = "1.0.0", optional = true }

# Core async runtime (wasm-compatible)
tokio = { workspace = true, features = ["macros", "rt"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
chrono.workspace = true

# Error handling and logging
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true



[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "test-util"] }
serial_test = "3.0"
