[package]
name = "antikythera-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Session management for Antikythera MCP Framework with persistent chat history"

[features]
default = []
ffi = ["dep:antikythera-log"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
postcard = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

# Optional dependencies
antikythera-log = { path = "../antikythera-log", version = "0.9.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
