[package]
name = "antikythera-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Session management for Antikythera MCP Framework with persistent chat history"

[features]
default = []
ffi = ["dep:antikythera-log"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
postcard = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true

# Optional dependencies
antikythera-log = { path = "../antikythera-log", version = "1.0.0", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
tempfile = "3.10"
