[package]
name = "antikythera-tests"
version = "0.9.8"
edition = "2024"
publish = false

# ============================================================================
# Log Module Tests
# ============================================================================

[[test]]
name = "log_tests"
path = "log/logger_tests.rs"

[[test]]
name = "comprehensive_logging_tests"
path = "log/comprehensive_logging_tests.rs"

# ============================================================================
# Session Module Tests
# ============================================================================

[[test]]
name = "session_tests"
path = "session/session_tests.rs"

[[test]]
name = "comprehensive_session_tests"
path = "session/comprehensive_session_tests.rs"

# ============================================================================
# SDK Module Tests
# ============================================================================

[[test]]
name = "sdk_config"
path = "sdk/config/config_tests.rs"

[[test]]
name = "comprehensive_config_security_tests"
path = "config/comprehensive_config_security_tests.rs"

# ============================================================================
# WASM Agent Tests (requires component feature)
# ============================================================================

[[test]]
name = "wasm_agent_processor_tests"
path = "sdk/wasm_agent/processor_tests.rs"

[[test]]
name = "wasm_agent_runner_tests"
path = "sdk/wasm_agent/runner_tests.rs"

[[test]]
name = "deterministic_harness_tests"
path = "sdk/wasm_agent/deterministic_harness_tests.rs"

[[test]]
name = "contract_compatibility_tests"
path = "contract/compatibility_tests.rs"

# ============================================================================
# Multi-Agent Hardening Tests
# ============================================================================

[[test]]
name = "multi_agent_hardening_tests"
path = "multi_agent/hardening_tests.rs"

[[test]]
name = "multi_agent_guardrails_tests"
path = "multi_agent/guardrails_tests.rs"

[[test]]
name = "hook_tests"
path = "hooks/hook_tests.rs"

[[test]]
name = "streaming_tests"
path = "streaming/streaming_tests.rs"

[[test]]
name = "comprehensive_streaming_tests"
path = "streaming/comprehensive_streaming_tests.rs"

# ============================================================================
# Resilience Module Tests
# ============================================================================

[[test]]
name = "resilience_tests"
path = "resilience/resilience_tests.rs"

[[test]]
name = "observability_tests"
path = "observability/observability_tests.rs"

# ============================================================================
# Dependencies
# ============================================================================

[dependencies]
antikythera-log = { path = "../antikythera-log" }
antikythera-session = { path = "../antikythera-session" }
antikythera-core = { path = "../antikythera-core", features = ["full"] }
antikythera-sdk = { path = "../antikythera-sdk", features = ["component", "multi-agent"] }
serde_json.workspace = true
chrono.workspace = true
tempfile = "3.10"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "test-util"] }
serial_test = "3.0"
async-trait.workspace = true
clap.workspace = true
